Segmentation fault in MovieClipEditor #38440

Closed
opened 2014-02-01 23:53:40 +01:00 by Alex Babahin · 8 comments

System Information
Ubuntu 13.10 Intel HD3000

Blender Version
Broken: (example: 2014-01-21 06:01 8b6b42b)

Stack trace:

0 put_postprocessed_frame_to_cache movieclip.c 790 0x24f62d7
1 movieclip_get_postprocessed_ibuf movieclip.c 881 0x24f6627
2 BKE_movieclip_get_ibuf_flag movieclip.c 898 0x24f66ac
3 uiTemplateMovieclipInformation clip_buttons.c 528 0x1b463e3
4 UILayout_template_movieclip_information_call rna_ui_gen.c 3213 0x2d46114
5 RNA_function_call rna_access.c 5682 0x2bf06ca
6 pyrna_func_call bpy_rna.c 5249 0x1fea039
7 PyObject_Call /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0 0x7ffff6d53878
8 PyEval_EvalFrameEx /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0 0x7ffff6c8e2ae
9 PyEval_EvalCodeEx /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0 0x7ffff6c95079
10 ?? /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0 0x7ffff6c95196
11 PyObject_Call /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0 0x7ffff6d53878
12 bpy_class_call bpy_rna.c 7258 0x1fec8e4
13 panel_draw rna_ui.c 146 0x2d3fbdb
14 ED_region_panels area.c 1718 0x1e61adb
15 clip_properties_area_draw space_clip.c 1482 0x1b35585
16 ED_region_do_draw area.c 439 0x1e5cf3e
17 wm_method_draw_triple wm_draw.c 626 0x19df245
18 wm_draw_update wm_draw.c 855 0x19dfa47
19 WM_main wm.c 480 0x19dafb2
20 main creator.c 1739 0x19da233

Exact steps for others to reproduce the error
Example - break.blend

  1. Select Motion Tracking layout.
  2. Open image or movie.
  3. Set "Render Undistorted" check box.
  4. Unroll "Fotage Information"
  5. Save to *.blend file
  6. Reopen and enjoy!
    profit!
**System Information** Ubuntu 13.10 Intel HD3000 **Blender Version** Broken: (example: 2014-01-21 06:01 8b6b42b) **Stack trace:** 0 put_postprocessed_frame_to_cache movieclip.c 790 0x24f62d7 1 movieclip_get_postprocessed_ibuf movieclip.c 881 0x24f6627 2 BKE_movieclip_get_ibuf_flag movieclip.c 898 0x24f66ac 3 uiTemplateMovieclipInformation clip_buttons.c 528 0x1b463e3 4 UILayout_template_movieclip_information_call rna_ui_gen.c 3213 0x2d46114 5 RNA_function_call rna_access.c 5682 0x2bf06ca 6 pyrna_func_call bpy_rna.c 5249 0x1fea039 7 PyObject_Call /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0 0x7ffff6d53878 8 PyEval_EvalFrameEx /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0 0x7ffff6c8e2ae 9 PyEval_EvalCodeEx /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0 0x7ffff6c95079 10 ?? /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0 0x7ffff6c95196 11 PyObject_Call /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0 0x7ffff6d53878 12 bpy_class_call bpy_rna.c 7258 0x1fec8e4 13 panel_draw rna_ui.c 146 0x2d3fbdb 14 ED_region_panels area.c 1718 0x1e61adb 15 clip_properties_area_draw space_clip.c 1482 0x1b35585 16 ED_region_do_draw area.c 439 0x1e5cf3e 17 wm_method_draw_triple wm_draw.c 626 0x19df245 18 wm_draw_update wm_draw.c 855 0x19dfa47 19 WM_main wm.c 480 0x19dafb2 20 main creator.c 1739 0x19da233 **Exact steps for others to reproduce the error** Example - [break.blend](https://archive.blender.org/developer/F75775/break.blend) 1) Select Motion Tracking layout. 2) Open image or movie. 3) Set "Render Undistorted" check box. 4) Unroll "Fotage Information" 5) Save to *.blend file 6) Reopen and enjoy! **profit!**
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alex Babahin self-assigned this 2014-02-01 23:53:40 +01:00
Author

Added subscriber: @AlekseyBabahin

Added subscriber: @AlekseyBabahin
Author
My solution: [D276: Fix #38440: Segmentation fault in MovieClipEditor.](https://archive.blender.org/developer/D276)
Alex Babahin was unassigned by Bastien Montagne 2014-02-04 10:11:35 +01:00
Sergey Sharybin was assigned by Bastien Montagne 2014-02-04 10:11:35 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by blender/blender-addons-contrib@5589016e24

This issue was referenced by blender/blender-addons-contrib@5589016e2446ee80028628cdde034eaeafcd7add

This issue was referenced by 5589016e24

This issue was referenced by 5589016e2446ee80028628cdde034eaeafcd7add
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Closed by commit 5589016e24.

Closed by commit 5589016e24.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38440
No description provided.