Fix T38440: Segmentation fault in Movie Clip Editor

Issue was caused by NULL-pointer de-reference when post-processing
the frame without putting the frame to movie cache.

Differential Revision: https://developer.blender.org/D276